[project]
name = "grumble"
version = "1.0.0"
description = "For print debuggers drowning in print statements."
authors = [
    {name = "Christian Hammond", email="christian@beanbaginc.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

keywords = [
    "debugging",
    "console",
    "logs",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]


[project.urls]
homepage = "https://github.com/chipx86/grumble"
documentation = "https://github.com/chipx86/grumble"
repository = "https://github.com/chipx86/grumble"
